# Lalamove-Rs

./: Cargo.toml  README.md
parsing/: 2.json  Cargo.toml  market_info.json  order.json
parsing/src/: main.rs
src/: awc.rs  client.rs  lib.rs  markets.rs  reqwest.rs
src/client/: awc.rs  mod.rs  reqwest.rs
